--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,7 +1,194 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:background="@color/colorPrimaryVariant"
     android:layout_height="match_parent">
 
+    <TextView
+        android:id="@+id/appName"
+        android:layout_width="@dimen/match_constraint"
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/standard_margin"
+        android:fontFamily="@font/clash_display_regular"
+        android:text="@string/delicious_food"
+        android:textColor="@color/colorOnSecondary"
+        android:textSize="32sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/categoryList"
+        android:layout_width="@dimen/match_constraint"
+        android:layout_height="@dimen/match_constraint"
+        android:layout_margin="@dimen/standard_margin"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/appName" />
+
+    <LinearLayout
+        android:id="@+id/layoutFirstProduct"
+        android:layout_width="@dimen/match_constraint"
+        android:layout_height="@dimen/match_constraint"
+        android:layout_margin="@dimen/standard_margin"
+        android:background="@drawable/layout_bg"
+        android:gravity="center"
+        android:orientation="vertical"
+        app:layout_constraintBottom_toTopOf="@id/layoutThirdProduct"
+        app:layout_constraintEnd_toStartOf="@id/layoutSecondProduct"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/categoryList">
+
+        <ImageView
+            android:id="@+id/firstProductPhoto"
+            android:layout_width="120dp"
+            android:layout_height="120dp"
+            android:src="@drawable/chicken_pop" />
+
+        <TextView
+            android:id="@+id/firstProductName"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/clash_display_regular"
+            android:text="Chicken Pop"
+            android:textColor="@color/colorOnSecondary"
+            android:textSize="@dimen/standard_text_size" />
+
+        <TextView
+            android:id="@+id/firstProductDescription"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/clash_display_regular"
+            android:paddingTop="@dimen/standard_padding_half"
+            android:paddingBottom="@dimen/standard_margin"
+            android:text="Best beef burger for you"
+            android:textSize="@dimen/standard_text_size_half" />
+
+        <TextView
+            android:id="@+id/firstProductPrice"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/clash_display_regular"
+            android:text="$39"
+            android:textColor="@color/colorOnSecondary"
+            android:textSize="@dimen/standard_text_size"
+            android:textStyle="bold" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/layoutSecondProduct"
+        android:layout_width="@dimen/match_constraint"
+        android:layout_height="@dimen/match_constraint"
+        android:layout_marginEnd="@dimen/standard_margin"
+        android:background="@drawable/layout_bg"
+        android:gravity="center"
+        android:orientation="vertical"
+        app:layout_constraintBottom_toBottomOf="@id/layoutFirstProduct"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@id/layoutFirstProduct"
+        app:layout_constraintTop_toTopOf="@id/layoutFirstProduct"
+        app:layout_constraintVertical_bias="1.0">
+
+        <ImageView
+            android:id="@+id/secondProductPhoto"
+            android:layout_width="120dp"
+            android:layout_height="120dp"
+            android:src="@drawable/pizza_whiskey" />
+
+        <TextView
+            android:id="@+id/secondProductName"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/clash_display_regular"
+            android:text="Whiskey Pizza"
+            android:textColor="@color/colorOnSecondary"
+            android:textSize="@dimen/standard_text_size" />
+
+        <TextView
+            android:id="@+id/secondProductDescription"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/clash_display_regular"
+            android:paddingTop="@dimen/standard_padding_half"
+            android:paddingBottom="@dimen/standard_margin"
+            android:text="Best beef burger for you"
+            android:textSize="@dimen/standard_text_size_half" />
+
+        <TextView
+            android:id="@+id/secondProductPrice"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/clash_display_regular"
+            android:text="$59"
+            android:textColor="@color/colorOnSecondary"
+            android:textSize="@dimen/standard_text_size"
+            android:textStyle="bold" />
+    </LinearLayout>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/layoutThirdProduct"
+        android:layout_width="@dimen/match_constraint"
+        android:layout_height="@dimen/match_constraint"
+        android:layout_margin="@dimen/standard_margin"
+        android:background="@drawable/layout_bg"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/layoutFirstProduct">
+
+        <TextView
+            android:id="@+id/thirdProductName"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/standard_margin"
+            android:fontFamily="@font/clash_display_regular"
+            android:text="Yummy pizza"
+            android:textColor="@color/colorOnSecondary"
+            android:textSize="@dimen/standard_text_size"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/thirdProductDescription"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/clash_display_regular"
+            android:paddingStart="@dimen/standard_margin"
+            android:paddingTop="@dimen/standard_padding_half"
+            android:paddingEnd="@dimen/standard_margin"
+            android:paddingBottom="@dimen/standard_margin"
+            android:text="Best rice rolls for you"
+            android:textColor="@color/colorOnSecondary"
+            android:textSize="@dimen/standard_text_size_half"
+            app:layout_constraintEnd_toEndOf="@id/thirdProductName"
+            app:layout_constraintStart_toStartOf="@id/thirdProductName"
+            app:layout_constraintTop_toBottomOf="@id/thirdProductName" />
+
+        <TextView
+            android:id="@+id/thirdProductPrice"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/clash_display_regular"
+            android:text="$29"
+            android:textColor="@color/colorOnSecondary"
+            android:textSize="@dimen/standard_text_size"
+            android:textStyle="bold"
+            app:layout_constraintEnd_toEndOf="@id/thirdProductDescription"
+            app:layout_constraintStart_toStartOf="@id/thirdProductDescription"
+            app:layout_constraintTop_toBottomOf="@id/thirdProductDescription" />
+
+        <ImageView
+            android:id="@+id/thirdProductPhoto"
+            android:layout_width="200dp"
+            android:layout_height="200dp"
+            android:layout_margin="@dimen/standard_margin"
+            android:src="@drawable/pizza"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
