--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,4 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <dimen name="match_constraint">0dp</dimen>
+    <dimen name="standard_margin">16dp</dimen>
+    <dimen name="standard_text_size">18sp</dimen>
+    <dimen name="standard_text_size_half">12sp</dimen>
+    <dimen name="standard_padding_half">8dp</dimen>
 </resources>
